--- a/exercicios/testes de aplicação/estilos/kudipro.css
+++ b/exercicios/testes de aplicação/estilos/kudipro.css
@@ -38,6 +38,12 @@
         text-decoration: none;
         font-weight: bold;
     }
+
+    .navegacao:hover {
+        background-color: #d49c87d6;
+        border-radius: 5px;
+        transition-duration: 1s;
+    }
     .hero {
         margin-top: 40px;
         text-align: center;
@@ -75,4 +81,12 @@
     .curso h3 {
         color: var(--cor-primaria);
         margin-bottom: 10px;
+    }
+
+    .link{
+        text-decoration: none;
+    }
+
+    .curso p {
+        color: white;
     }
