--- a/exercicios/desafios/d12/style.css
+++ b/exercicios/desafios/d12/style.css
@@ -58,6 +58,10 @@ section {
     font-size: 3.5vw;
 }
 
+section p {
+    padding-bottom: 1em;
+}
+
 .normal {
     background-color: white;
     color: black;
@@ -65,13 +69,26 @@ section {
 
 .imagem {
     background-color: rgb(59, 52, 52);
+    background-size: cover;
+    background-attachment: fixed;
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.24);
 }
 
 .imagem p {
-    background-color: rgba(0, 0, 0, 0.253);
+    background-color: rgba(0, 0, 0, 0.531);
     display: inline-block;
     padding: 6px;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.894);
+}
+
+#img01 {
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+}
+
+#img02 {
+    background-image: url(imagens/background002.jpg);
 }
 
 footer {
